[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameEntities/EntityBehaviours/EntityObfuscation/EnityObfuscation.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameEntities/EntitySelected/EntitySelection.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameEntities/EntityBehaviours/EntityDetector/EntityDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameEntities/Structure/Structure.gd" type="Script" id=5]

[node name="Structure" type="Node2D" groups=["Targetor"]]
scale = Vector2( 0.75, 0.75 )
z_index = 1
script = ExtResource( 5 )

[node name="EntityObfuscation" parent="." instance=ExtResource( 1 )]
obfuscation_level = 3

[node name="DetectorNode" parent="." instance=ExtResource( 3 )]

[node name="Selection" parent="." instance=ExtResource( 2 )]
SelectionArea = Vector2( 60, 50 )

[node name="StructureInformationUI" type="Control" parent="."]
margin_left = -25.0
margin_top = 50.0
margin_right = 25.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildPercentage" type="Label" parent="StructureInformationUI"]
unique_name_in_owner = true
margin_right = 50.0
margin_bottom = 14.0
text = "000%"
align = 1
valign = 1

[node name="PauseConstruction" type="Button" parent="StructureInformationUI"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.0
margin_top = 20.0
margin_right = 25.0
margin_bottom = 40.0
text = "Pause"

[connection signal="pressed" from="StructureInformationUI/PauseConstruction" to="." method="onPauseConstructionPressed"]
